# unnatural-language-generation

./: .gitignore  LICENSE  Pipfile  README.md  bot.py  cli.py  config-example.yml  funcs.py  main.py  main_bot.py  phrases.yml  pyproject.toml  requirements.txt  setup.py
telegram_bot/: __init__.py  bot.py  bot_config_example.yaml  bot_config_example.yml  bot_phrases.yaml  bot_phrases.yml  core.py  generator.py  helpers.py  phrases.yml  sql_queries.yaml
text_generation/: __init__.py  core.py  helpers.py
text_generator/: __init__.py  generate.py  generator.py  graph.py  helpers.py  io.py  tokenize.py
text_generator/scripts/: cli.py
